// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
    
package pb;

// InjuredSegment ..
message InjuredSegment {
    string path = 1;
    repeated int32 lost_pieces = 2;
}
